# bgc-viewer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  build.sh  dev.html  docker-compose.yml  jest.config.js  package.json  pyproject.toml  region-viewer-demo.html
.github/workflows/: ci.yml  docs.yml  fair-software.yml  release.yml
backend/: .env.example  MANIFEST.in  README.md  preprocess_cli.py  preprocess_data.py  pyproject.toml  pytest.ini  test_preprocessing.py
backend/bgc_viewer/: __init__.py  app.py  data_loader.py  database.py  file_utils.py  preprocessing.py
backend/rust_extensions/: Cargo.toml
bgc_viewer/: app.py
bgc_viewer/static/: app.js
bgc_viewer/templates/: index.html
bgc_viewer/tests/: test_app.py
demos/data/: attributes.db
demos/track-viewer/: README.md  index.html
demos/viewer-web-component/: README.md  index.html
docs/: README.md
docs/guide/: index.md  package-lock.json  package.json
frontend/: README.md  index.html  package-lock.json  package-web-components.json  package.json  tsconfig.json  vite.config.js  vite.config.webcomponents.js  vitest.config.js
frontend/src/: App.vue  TrackViewer.ts  TrackViewerContextMenu.ts  web-components.js  web-components.ts
frontend/static/: regionviewer.umd.js
scripts/: build-docs.sh  serve-docs.sh  version.sh
src/: RegionViewer.ts
src/__tests__/: RegionViewer.test.ts
viewer-components/: README.md  debug-test.js  dev.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
viewer-components/src/: index.ts  (+2 more)
(+58 files in other folders)
